Modified pom with pugin tag

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
   </dependencies>
   
   <build>
+  <plugins>
   	<plugin>
    <groupId>com.google.appengine</groupId>
    <artifactId>appengine-maven-plugin</artifactId>
@@ -132,7 +133,7 @@
          <address>0.0.0.0</address>
      </configuration>
 	</plugin>
-  	
+  	</plugins>
   </build>
   
 </project>
