--- a/pom.xml
+++ b/pom.xml
@@ -101,13 +101,19 @@
     	</exclusion>
     </exclusions>
 </dependency>
+
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+   	
+
    
    	<dependency>
 				<groupId>org.springframework.cloud</groupId>
     			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 			</dependency>
    	
-
 	
 	<dependency>
     <groupId>org.springframework.boot</groupId>
@@ -126,12 +132,7 @@
   	<plugin>
    <groupId>com.google.appengine</groupId>
    <artifactId>appengine-maven-plugin</artifactId>
-   <version>1.9.56</version>
-   <configuration>
-         <enableJarClasses>true</enableJarClasses>
-         <port>8181</port>
-         <address>0.0.0.0</address>
-     </configuration>
+   <version>1.9.57-SNAPSHOT</version>
 	</plugin>
   	</plugins>
   </build>
