--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,15 @@
   	<plugin>
    <groupId>com.google.appengine</groupId>
    <artifactId>appengine-maven-plugin</artifactId>
-   <version>1.9.57-SNAPSHOT</version>
+   <version>1.3.1</version>
 	</plugin>
+	<plugin>
+     <groupId>org.eclipse.jetty</groupId>
+     <artifactId>jetty-maven-plugin</artifactId>
+     <version>9.3.7.v20160115</version>
+   </plugin>
+	
+	
   	</plugins>
   </build>
   
