--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -7,7 +7,7 @@ runtime_config:
 
 handlers:
 - url: /.*
-  script: this field is required, but ignored
+  script: test No need to set anything here
 
 manual_scaling:
   instances: 1
